--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
                     <div class="col-8">
                         <div class="row">
                             <div class="col-md">
-                                <p class="title">Seu Nome Completo</p>
+                                <p class="title">Gabriel dos Santos Reis</p>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-md">
-                                <p><i class="material-icons-outlined vertext">computer</i> Engenheiro de Software</p>
-                                <p><i class="material-icons-outlined vertext">link</i> <a href="http://www.linkedin.com/in/username" target="_blank">www.linkedin.com/in/username</a></p>
-                                <p><i class="material-icons-outlined vertext">code</i> <a href="http://www.github.com/username" target="_blank">github.com/username</a></p>
+                                <p><i class="material-icons-outlined vertext">computer</i>Analista de Sistemas</p>
+                                <p><i class="material-icons-outlined vertext">link</i> <a href="http://www.linkedin.com/in/gaelsreis" target="_blank">www.linkedin.com/in/gaelsreis</a></p>
+                                <p><i class="material-icons-outlined vertext">code</i> <a href="http://www.github.com/gaelsreis" target="_blank">github.com/gaelsreis</a></p>
                             </div>
                             <div class="col-md">
-                                <p><i class="material-icons-outlined vertext">my_location</i> Brasilia, Brasil</p>
-                                <p><i class="material-icons-outlined vertext">email</i> username@gmail.com</p>
-                                <p><i class="material-icons-outlined vertext">phone</i> +55 99 99999-9999</p>
+                                <p><i class="material-icons-outlined vertext">my_location</i> Rio de Janeiro, Brasil</p>
+                                <p><i class="material-icons-outlined vertext">email</i> gaelsreis@outlook.com</p>
+                                <p><i class="material-icons-outlined vertext">phone</i> +55 21 99376-9622</p>
                             </div>
                         </div>
                     </div>
@@ -78,7 +78,7 @@
                     <p>A partir de agora e com você, continue falando sobre o perfil e sua experiência profissional, </p>
                     
                     <p> <strong> Histórico de algumas tecnologias usadas: </strong> </p>
-                    PHP, Mysql, Restful, Micro serviços, etc., etc., etc.
+                    .NET (VB, ASP, C#), SQL Server.
                 </div>
             </div>
             <div class="tab-pane fade show bg-white bg-tab-style" id="wexperience" role="tabpanel" aria-labelledby="wexperience-tab">
@@ -148,23 +148,13 @@
             <div class="tab-pane fade" id="education" role="tabpanel" aria-labelledby="education-tab">
                 <div class="tab-pane fade show bg-white active bg-tab-style" id="about" role="tabpanel" aria-labelledby="about-tab">
                     <div class="border-bottom border-left border-right border-gray tab-padding">
-                        <div class="bg-blue divisor">
-                            <div class="row">
-                                <div class="col-9">
-                                    <i class="material-icons-outlined vertext">school</i> <span class="job-title">Especialização em Engenharia de Software</span> | Faculdade de Tecnologia de Brasilia - FTB
-                                </div>
-                                <div class="col-3">
-                                    <i class="material-icons-outlined vertext">date_range</i> Jan/2010 - Dez/2012​
-                                </div>
-                            </div>
-                        </div>
                         <div class="bg-light-blue divisor">
                             <div class="row">
                                 <div class="col-9">
-                                    <i class="material-icons-outlined vertext">school</i> <span class="job-title">Bacharel em Ciências de Computação</span> | Universidade XPTO - UNIXPTO
+                                    <i class="material-icons-outlined vertext">school</i> <span class="job-title">Bacharel em Analise de Sistemas</span> | Universidade Estácio de Sá - UNESA
                                 </div>
                                 <div class="col-3">
-                                    <i class="material-icons-outlined vertext">date_range</i> Jan/2007 - Dez/2010​
+                                    <i class="material-icons-outlined vertext">date_range</i> Jul/2000 - Jun/2007
                                 </div>
                             </div>
                         </div>
